--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -3,12 +3,14 @@
 @import '../utilities/keyframes';
 
 .card {
+  position: relative;
   display: flex;
   align-items: center;
   background: $white;
   border: 1px solid $border-color;
   border-radius: 3px;
   padding: 15px;
+  cursor: pointer;
   p {
     font-size: 12px;
     color: $secondary-font-color;
@@ -16,6 +18,14 @@
   h2 {
     font-size: 20px;
   }
+}
+
+.card-overlay {
+  position: absolute;
+  right: 0;
+  height: 100%;
+  width: 100%;
+
 }
 
 .profile-pic {
