--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,3 +1,37 @@
 @import '../utilities/mixins';
 @import '../utilities/variables';
 @import '../utilities/keyframes';
+
+header {
+  @include flex-between;
+}
+
+.search {
+  position: relative;
+  @include desktop {
+    width: 40%;
+  }
+
+}
+
+.fa-search {
+  position: absolute;
+  right: 15px;
+  @include desktop {
+    top: 10px;
+  }
+}
+
+input {
+  display: none;
+  padding: 10px;
+  color: $primary-font-color;
+  border: 1px solid $border-color;
+  border-radius: 3px;
+  @include tablet {
+    width: 100%;
+  }
+  @include desktop {
+    display: inline;
+  }
+}
