--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -10,6 +10,7 @@
   border: 1px solid $border-color;
   border-radius: 3px;
   padding: 15px;
+  margin-right: $body-space;
   cursor: pointer;
   p {
     font-size: 12px;
@@ -17,6 +18,9 @@
   }
   h2 {
     font-size: 20px;
+  }
+  @include tablet {
+    margin-right: 0;
   }
 }
 
