--- a/scss/components/_pop-up.scss
+++ b/scss/components/_pop-up.scss
@@ -12,7 +12,7 @@
   background-color: rgba(0, 0, 0, 0.3);
   top: 0px;
   right: 0px;
-
+  z-index: 500;
 }
 
 .overlay-card {
@@ -24,6 +24,7 @@
   border: 1px solid $border-color;
   border-radius: 3px;
   width: 290px;
+  z-index: 1000;
   p {
     font-size: 16px;
     color: $secondary-font-color;
