--- a/scss/base/_grid.scss
+++ b/scss/base/_grid.scss
@@ -4,6 +4,6 @@
 
 .cards-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
   grid-gap: $body-space;
 }
