--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -15,6 +15,9 @@
 @mixin phone {
   @media (max-width: 320px) { @content; }
 }
+@mixin lg-phone {
+  @media (min-width: 375px) { @content; }
+}
 @mixin tablet {
   @media (min-width: 768px) { @content; }
 }
